# Data-Bridge

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.ko.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
docs/design/: architecture.md  phase-quality-hardening.md  review-log-v0.2.1-ci.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md
evals/: demo_golden.yaml
samples/docs/: meeting-atlas-kickoff.md  onboarding.md  ops-runbook.md  product-overview.md  risk-log.md  security-review-ko.md
scripts/: ingest_samples.py  migrate.py  run_golden.py  setup_cicd.sh
src/databridge/: __init__.py  citations.py
src/databridge/agents/: __init__.py  deps.py  runtime.py  team.py  tools.py  tools_bigquery.py
src/databridge/embed/: __init__.py  base.py  hashed.py  vertex.py
src/databridge/ingest/: __init__.py  chunker.py  markdown.py
src/databridge/server/: __init__.py  app.py  index.html
src/databridge/store/: __init__.py  pg.py  schema.sql
tests/: test_bigquery_guard.py  test_chunker.py  test_citations.py  test_runtime_grounding.py  test_store_search.py
